Fix #413. Do not hide scrollbars in over state.

--- a/src/stylesheets/components/photo/_grid.scss
+++ b/src/stylesheets/components/photo/_grid.scss
@@ -12,10 +12,6 @@
     @extend %drop-target;
   }
 
-  .over & {
-    overflow: hidden;
-  }
-
   .scroll-container {
     padding: $space-min $default-padding-horizontal 0;
   }
